# Rust-Pacman

Rust-PacMan/rust-pacman/: Cargo.toml  squarelocation.txt
Rust-PacMan/rust-pacman/src/: game.rs  main.rs
rust-pacman/: Cargo.toml  Report.md  intersections.txt  pellets.txt  squarelocation.txt
rust-pacman/src/: game.rs  ghost.rs  main.rs
