[package]
name = "pacman"
version = "0.1.0"
authors = ["Vjan"]

[dependencies]
piston = "0.26.0"
piston2d-graphics = "0.19.0"
pistoncore-glutin_window = "0.31.0"
piston2d-opengl_graphics = "0.36.0"
piston_window = "0.57.0"
find_folder = "0.3.0"
gfx_device_gl = "0.11.2"
piston2d-gfx_graphics = "0.33.1"
gfx = "0.12.1"
rand = "0.3"